No. of Tokens	align issue fixed on assets

--- a/src/containers/Auction/index.less
+++ b/src/containers/Auction/index.less
@@ -1,9 +1,6 @@
 @import "../../assets/less/variables.less";
 
 .auction-table {
-  td:nth-child(2) {
-    display: flex;
-  }
   .endtime-badge {
     background: @bg-light;
     display: inline-block;
